public/css/style.css
html, body {
	margin: 0;
	height: 100%;
}

#mapCanvas { 
	float: right;
	height: 100%;
	width: 100%;
}

#mapLeft {
	position: fixed;
	float: left;	
	width: 20%;
	height: 80%;
	z-index: 10;
	overflow: auto;
	top: 10%; 
	opacity: .65;
}

#photoList {
	overflow: auto;
	list-style-type: none;
}

.photo {
	display: block;
	border: solid 1px;
}
.photo, .photoLink {
	padding-right: 8px;
	padding-top: 10px;
	padding-left: 20px;
	padding-bottom: 10px;
	background-color: #98bf21;
	outline: 0;
	color: inherit; 
}

.photoLink {
	display: inline;
	text-decoration: none;
}

.photoLink:hover {
	background-color: #bf2148;
}

.pinImage {
	/*
	display: inline;
	position: relative;
	*/
	float: right;
	left: 20%;
	zoom: 75%;
}

